[project]
name = "vimania-uri"
version = "0.11.1"
description = "markdown URI navigation for VIM"
authors = [
    {name = "sysid", email = "sysid@gmx.de"},
]
url = "https://github.com/sysid/vimania-url"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer",
    "pydantic",
    "beautifulsoup4",
    "requests",
    "lxml",
    "pydantic-settings>=2.1.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "codecov",
    "pytest-cov",
    "build",
    "pytest-mock",
]

[tool.bumpversion]
current_version = "0.11.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.bumpversion.file_patterns]
"pythonx/vimania_uri/__init__.py" = [
    {search = "__version__ = '{current_version}'", replace = "__version__ = '{new_version}'"},
]
"VERSION" = [
    {search = "{current_version}", replace = "{new_version}"},
]
"pyproject.toml" = [
    {search = "version = {current_version}", replace = "version = {new_version}"},
]

[[tool.bumpversion.files]]
filename = "VERSION"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "pythonx/vimania_uri/__init__.py"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
ignore_missing_imports = false
namespace_packages = true

[tool.coverage.run]
source = ["pythonx/vimania_uri"]
omit = [
    "tests/*",
    "**/__main__.py",
    "**/.venv/*",
    "**/site-packages/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
