[metadata]
name = vimania
version = 0.8.0
description = "todo manager with VIM integration"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = sysid
author_email = sysid@gmx.de
url = https://github.com/sysid/twbm
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    beautifulsoup4
    certifi
    cryptography
    urllib3
    html5lib
    SQLAlchemy
    alembic
    typer
    pydantic[dotenv]
    requests
    lxml
    pure-sql
include_package_data = True
python_requires = >=3.9

[options.entry_points]
console_scripts =
    vimania = vimania:app

[isort]
profile = black
src_paths = pythonx/vimania,tests
skip = .gitignore,.dockerignore,.tox,.venv,build,dist,buku.py,rifle.py

[flake8]
max-complexity = 10
max-line-length = 88
ignore =
	E203  ; whitespace before ‘:’ (black)
	F541  ; f-string is missing placeholders
	B008  ; Do not perform function calls in argument defaults.
	E501  ; line too long (will be taken care of by black)
	ASS001 ; do not use bare asserts
exclude =
	.git
	__pycache__
	.venv
	.eggs
	*.egg
	dist

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
exclude = (tests,)
ignore_missing_imports = True
follow_imports = silent
no_implicit_optional = True

[coverage:run]
omit = tests/*,**/__main__.py,**/.venv/*,**/site-packages/*,examples/*
branch = True

[coverage:report]
show_missing = True
skip_covered = True
;fail_under = 75

[tool.scriv]
format = md
version = literal: ./pythonx/vimania/__init__.py: __version__
